add_library(render_gl STATIC
    gl/shader.cpp
    gl/buffer.cpp
    gl/mesh.cpp
    gl/texture.cpp
    gl/primitives.cpp
    scene_renderer.cpp
    render_backend_factory.cpp
    gl/camera.cpp
    gl/resources.cpp
    gl/bootstrap.cpp
    gl/backend.cpp
    gl/backend/cylinder_pipeline.cpp
    gl/backend/vegetation_pipeline.cpp
    gl/backend/terrain_pipeline.cpp
    gl/backend/character_pipeline.cpp
    gl/backend/water_pipeline.cpp
    gl/backend/effects_pipeline.cpp
    gl/backend/primitive_batch_pipeline.cpp
    gl/backend/banner_pipeline.cpp
    gl/backend/healing_beam_pipeline.cpp
    gl/backend/healer_aura_pipeline.cpp
    gl/backend/combat_dust_pipeline.cpp
    gl/backend/mode_indicator_pipeline.cpp
    gl/backend/rain_pipeline.cpp
    gl/backend/mesh_instancing_pipeline.cpp
    gl/backend/rigged_character_pipeline.cpp
    gl/shader_cache.cpp
    gl/state_scopes.cpp
    draw_queue.cpp
    render_archetype.cpp
    world_chunk.cpp
    primitive_batch.cpp
    template_cache.cpp
    rig_dsl/rig_interpreter.cpp
    pipeline/instance_coalescer.cpp
    pass/frame_pass_runner.cpp
    pass/primitive_flush_pass.cpp
    pass/construction_preview_pass.cpp
    ground/spawn_validator.cpp
    ground/linear_feature_geometry.cpp
    ground/terrain_surface_manager.cpp
    ground/ground_renderer.cpp
    ground/fog_renderer.cpp
    ground/terrain_renderer.cpp
    ground/river_renderer.cpp
    ground/road_renderer.cpp
    ground/olive_renderer.cpp
    ground/riverbank_renderer.cpp
    ground/riverbank_asset_renderer.cpp
    ground/bridge_renderer.cpp
    ground/terrain_feature_manager.cpp
    ground/biome_renderer.cpp
    ground/stone_renderer.cpp
    ground/plant_renderer.cpp
    ground/pine_renderer.cpp
    ground/firecamp_renderer.cpp
    ground/terrain_scatter_manager.cpp
    ground/rain_renderer.cpp
    entity/registry.cpp
    entity/nations/roman/archer_renderer.cpp
    entity/nations/carthage/archer_renderer.cpp
    entity/nations/roman/archer_style.cpp
    entity/nations/carthage/archer_style.cpp
    entity/nations/roman/swordsman_renderer.cpp
    entity/nations/carthage/swordsman_renderer.cpp
    entity/nations/roman/swordsman_style.cpp
    entity/nations/carthage/swordsman_style.cpp
    entity/nations/roman/spearman_renderer.cpp
    entity/nations/carthage/spearman_renderer.cpp
    entity/nations/roman/spearman_style.cpp
    entity/nations/carthage/spearman_style.cpp
    horse/horse_profile_data.cpp
    horse/prepare.cpp
    horse/horse_spec.cpp
    horse/horse_motion.cpp
    horse/horse_manifest.cpp
    entity/horse_renderer.cpp
    entity/mounted_humanoid_renderer_base.cpp
    entity/mounted_prepare.cpp
    entity/mounted_knight_renderer_base.cpp
    entity/horse_archer_renderer_base.cpp
    entity/horse_spearman_renderer_base.cpp
    entity/nations/roman/horse_swordsman_renderer.cpp
    entity/nations/carthage/horse_swordsman_renderer.cpp
    entity/nations/roman/horse_archer_renderer.cpp
    entity/nations/carthage/horse_archer_renderer.cpp
    entity/nations/roman/horse_spearman_renderer.cpp
    entity/nations/carthage/horse_spearman_renderer.cpp
    entity/nations/roman/healer_renderer.cpp
    entity/nations/roman/healer_style.cpp
    entity/nations/carthage/healer_renderer.cpp
    entity/nations/carthage/healer_style.cpp
    entity/nations/roman/builder_renderer.cpp
    entity/nations/roman/builder_style.cpp
    entity/nations/carthage/builder_renderer.cpp
    entity/nations/carthage/builder_style.cpp
    entity/healing_beam_renderer.cpp
    entity/healing_waves_renderer.cpp
    entity/healer_aura_renderer.cpp
    entity/combat_dust_renderer.cpp
    entity/building_archetype_desc.cpp
    entity/building_render_common.cpp
    entity/barracks_renderer.cpp
    entity/nations/roman/barracks_renderer.cpp
    entity/nations/carthage/barracks_renderer.cpp
    entity/defense_tower_renderer.cpp
    entity/nations/roman/defense_tower_renderer.cpp
    entity/nations/carthage/defense_tower_renderer.cpp
    entity/home_renderer.cpp
    entity/nations/roman/home_renderer.cpp
    entity/nations/carthage/home_renderer.cpp
    entity/catapult_renderer.cpp
    entity/nations/roman/catapult_renderer.cpp
    entity/nations/carthage/catapult_renderer.cpp
    entity/ballista_renderer.cpp
    entity/nations/roman/ballista_renderer.cpp
    entity/nations/carthage/ballista_renderer.cpp
    elephant/elephant_profile_data.cpp
    elephant/elephant_motion.cpp
    elephant/prepare.cpp
    elephant/elephant_spec.cpp
    elephant/elephant_manifest.cpp
    entity/elephant_renderer.cpp
    entity/nations/carthage/elephant_renderer.cpp
    # entity/arrow.cpp removed; arrow VFX renderer code moved to geom/arrow.cpp
    geom/selection_ring.cpp
    geom/selection_disc.cpp
    geom/arrow.cpp
    geom/stone.cpp
    geom/mode_indicator.cpp
    geom/projectile_renderer.cpp
    geom/flag.cpp
    geom/banner_cloth.cpp
    geom/patrol_flags.cpp
    geom/formation_arrow.cpp
    geom/transforms.cpp
    geom/parts.cpp
    humanoid/humanoid_math.cpp
    gl/humanoid/animation/animation_inputs.cpp
    gl/humanoid/animation/gait.cpp
    palette.cpp
    humanoid/rig.cpp
    humanoid/prepare.cpp
    humanoid/poser.cpp
    humanoid/facial_hair_catalog.cpp
    humanoid/formation_calculator.cpp
    humanoid/style_palette.cpp
    humanoid/pose_controller.cpp
    humanoid/mounted_pose_controller.cpp
    humanoid/skeleton.cpp
    humanoid/humanoid_full_builder.cpp
    humanoid/humanoid_spec.cpp
    humanoid/humanoid_state_machine.cpp
    humanoid/humanoid_clip_registry.cpp
    creature/bpat/bpat_writer.cpp
    creature/bpat/bpat_reader.cpp
    creature/bpat/bpat_registry.cpp
    creature/snapshot_mesh_asset.cpp
    creature/snapshot_mesh_registry.cpp
    creature/skeleton.cpp
    creature/part_graph.cpp
    creature/spec.cpp
    creature/species_manifest.cpp
    creature/quadruped/skeleton_factory.cpp
    creature/quadruped/gait.cpp
    creature/quadruped/mesh_graph.cpp
    creature/anatomy_bake.cpp
    creature/archetype_registry.cpp
    creature/pipeline/creature_render_state.cpp
    creature/pipeline/creature_pipeline.cpp
    creature/pipeline/creature_visual_definition.cpp
    creature/pipeline/creature_asset.cpp
    creature/pipeline/prepared_submit.cpp
    creature/pipeline/lod_decision.cpp
    creature/pipeline/preparation_common.cpp
    creature/pipeline/creature_render_graph.cpp
    rigged_mesh.cpp
    rigged_mesh_bake.cpp
    rigged_mesh_cache.cpp
    snapshot_mesh_cache.cpp
    snapshot_mesh_bake.cpp
    static_attachment_spec.cpp
    bone_palette_arena.cpp
    unit_render_cache.cpp
    pose_palette_cache.cpp
    mesh_geometry_pool.cpp
    equipment/equipment_registry.cpp
    equipment/equipment_submit.cpp
    equipment/attachment_builder.cpp
    equipment/register_equipment.cpp
    equipment/armor/roman_armor.cpp
    equipment/armor/armor_light_carthage.cpp
    equipment/armor/armor_heavy_carthage.cpp
    equipment/armor/roman_greaves.cpp
    equipment/armor/roman_shoulder_cover.cpp
    equipment/armor/carthage_shoulder_cover.cpp
    equipment/armor/work_apron_renderer.cpp
    equipment/armor/tool_belt_renderer.cpp
    equipment/armor/arm_guards_renderer.cpp
    equipment/armor/cloak_renderer.cpp
    equipment/weapons/bow_renderer.cpp
    equipment/weapons/quiver_renderer.cpp
    equipment/weapons/roman_scutum.cpp
    equipment/weapons/sword_renderer.cpp
    equipment/weapons/sword_carthage.cpp
    equipment/weapons/sword_roman.cpp
    equipment/weapons/spear_renderer.cpp
    equipment/weapons/shield_renderer.cpp
    equipment/weapons/shield_carthage.cpp
    equipment/weapons/shield_roman.cpp
    equipment/helmets/headwrap.cpp
    equipment/helmets/roman_heavy_helmet.cpp
    equipment/helmets/roman_light_helmet.cpp
    equipment/helmets/carthage_heavy_helmet.cpp
    equipment/helmets/carthage_light_helmet.cpp
    equipment/horse/saddles/roman_saddle_renderer.cpp
    equipment/horse/saddles/carthage_saddle_renderer.cpp
    equipment/horse/saddles/light_cavalry_saddle_renderer.cpp
    equipment/horse/saddles/horse_mount_archetype.cpp
    equipment/horse/horse_attachment_archetype.cpp
    equipment/horse/tack/bridle_renderer.cpp
    equipment/horse/tack/blanket_renderer.cpp
    equipment/horse/tack/reins_renderer.cpp
    equipment/horse/armor/scale_barding_renderer.cpp
    equipment/horse/armor/leather_barding_renderer.cpp
    equipment/horse/armor/champion_renderer.cpp
    equipment/horse/armor/crupper_renderer.cpp
    equipment/horse/decorations/saddle_bag_renderer.cpp
    software/software_rasterizer.cpp
    software_backend.cpp
    profiling/frame_profile.cpp
    profiling/profiling_hud.cpp
)

target_include_directories(render_gl PUBLIC .)
target_link_libraries(render_gl PUBLIC Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Gui Qt${QT_VERSION_MAJOR}::OpenGL ${OPENGL_LIBRARIES} engine_core)

# Optimization flags for render hot paths
if(CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
        target_compile_options(render_gl PRIVATE
            -march=native          # Use CPU-specific instructions
            -mtune=native         # Optimize for current CPU
            -fno-math-errno       # Faster math
            -fno-trapping-math
        )
    endif()
endif()
